fixed scrollbar and carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body,
 html {
     /* reset margin and padding so there's no gap between the nav and the screen edges */
     margin: 0;
-       padding: 0;
+    padding: 0;
 }
 
 /* Mobile - 1023px */
@@ -1186,15 +1186,15 @@ html {
 .gallery {
   max-width: 45rem;
   margin: 0 auto 8rem;
-  padding: 14rem 1.25rem 1.25rem 1.25rem;
-
+  padding: 14rem 1.25rem 1.25rem 1.25rem;   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: 'Lato', sans-serif;
 }
 
 * {
   box-sizing: border-box;
-  scrollbar-color: transparent transparent; /* thumb and track color */
-
 }
 
 .modal::-webkit-scrollbar {
@@ -1223,6 +1223,7 @@ ol, li {
   position: relative;
   filter: drop-shadow(0 0 10px #0003);
   perspective: 100px;
+  width: 75%;
 }
 
   .carousel__container {
